--- a/oma2/oma2/Status.xib
+++ b/oma2/oma2/Status.xib
@@ -63,6 +63,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{133, 193}, {48, 14}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="78601372"/>
 							<string key="NSReuseIdentifierKey">_NS:3944</string>
 							<bool key="NSEnabled">YES</bool>
@@ -112,6 +113,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{11, 5}, {210, 18}}</string>
 											<reference key="NSSuperview" ref="123839031"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="240803401"/>
 											<string key="NSReuseIdentifierKey">_NS:779</string>
 											<bool key="NSEnabled">YES</bool>
@@ -134,12 +136,14 @@
 									</object>
 									<string key="NSFrame">{{1, 1}, {229, 29}}</string>
 									<reference key="NSSuperview" ref="860410324"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="451424973"/>
 									<string key="NSReuseIdentifierKey">_NS:21</string>
 								</object>
 							</object>
 							<string key="NSFrame">{{8, 162}, {231, 47}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="123839031"/>
 							<string key="NSReuseIdentifierKey">_NS:18</string>
 							<string key="NSOffsets">{0, 0}</string>
@@ -183,6 +187,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{15, 26}, {78, 17}}</string>
 											<reference key="NSSuperview" ref="144877523"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="669491963"/>
 											<string key="NSReuseIdentifierKey">_NS:3944</string>
 											<bool key="NSEnabled">YES</bool>
@@ -206,6 +211,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{53, 6}, {38, 16}}</string>
 											<reference key="NSSuperview" ref="144877523"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="557591714"/>
 											<string key="NSReuseIdentifierKey">_NS:687</string>
 											<bool key="NSEnabled">YES</bool>
@@ -233,6 +239,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{7, 6}, {38, 16}}</string>
 											<reference key="NSSuperview" ref="144877523"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="705411830"/>
 											<string key="NSReuseIdentifierKey">_NS:687</string>
 											<bool key="NSEnabled">YES</bool>
@@ -254,12 +261,14 @@
 									</object>
 									<string key="NSFrame">{{1, 1}, {98, 49}}</string>
 									<reference key="NSSuperview" ref="518615036"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="491098109"/>
 									<string key="NSReuseIdentifierKey">_NS:21</string>
 								</object>
 							</object>
 							<string key="NSFrame">{{17, 236}, {100, 65}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="144877523"/>
 							<string key="NSReuseIdentifierKey">_NS:18</string>
 							<string key="NSOffsets">{0, 0}</string>
@@ -285,6 +294,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{36, 219}, {61, 18}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="304024165"/>
 							<string key="NSReuseIdentifierKey">_NS:771</string>
 							<bool key="NSEnabled">YES</bool>
@@ -325,6 +335,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{15, 26}, {78, 17}}</string>
 											<reference key="NSSuperview" ref="440458232"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="294684194"/>
 											<string key="NSReuseIdentifierKey">_NS:3944</string>
 											<bool key="NSEnabled">YES</bool>
@@ -344,6 +355,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{53, 6}, {38, 16}}</string>
 											<reference key="NSSuperview" ref="440458232"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="48275281"/>
 											<string key="NSReuseIdentifierKey">_NS:687</string>
 											<bool key="NSEnabled">YES</bool>
@@ -367,6 +379,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{7, 6}, {38, 16}}</string>
 											<reference key="NSSuperview" ref="440458232"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="308026372"/>
 											<string key="NSReuseIdentifierKey">_NS:687</string>
 											<bool key="NSEnabled">YES</bool>
@@ -388,12 +401,14 @@
 									</object>
 									<string key="NSFrame">{{1, 1}, {98, 49}}</string>
 									<reference key="NSSuperview" ref="304024165"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="284205641"/>
 									<string key="NSReuseIdentifierKey">_NS:21</string>
 								</object>
 							</object>
 							<string key="NSFrame">{{129, 236}, {100, 65}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="440458232"/>
 							<string key="NSReuseIdentifierKey">_NS:18</string>
 							<string key="NSOffsets">{0, 0}</string>
@@ -419,6 +434,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{148, 219}, {61, 18}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="860410324"/>
 							<string key="NSReuseIdentifierKey">_NS:771</string>
 							<bool key="NSEnabled">YES</bool>
@@ -444,7 +460,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{8, 108}, {231, 45}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSNextKeyView"/>
+							<reference key="NSWindow"/>
 							<string key="NSReuseIdentifierKey">_NS:797</string>
 							<bool key="NSEnabled">YES</bool>
 							<int key="NSNumRows">1</int>
@@ -589,9 +605,10 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 					</object>
 					<string key="NSFrameSize">{246, 301}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="518615036"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
@@ -630,6 +647,38 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 					<int key="connectionID">303</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">scaleState</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="48275281"/>
+					</object>
+					<int key="connectionID">310</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">scaleCheckbox:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="48275281"/>
+					</object>
+					<int key="connectionID">311</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">updateState</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="557591714"/>
+					</object>
+					<int key="connectionID">318</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">updateCheckbox:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="557591714"/>
+					</object>
+					<int key="connectionID">319</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: MinMaxInc</string>
 						<reference key="source" ref="451424973"/>
@@ -652,26 +701,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<reference key="destination" ref="594875767"/>
 					</object>
 					<int key="connectionID">242</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: autoScale</string>
-						<reference key="source" ref="48275281"/>
-						<reference key="destination" ref="594875767"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="48275281"/>
-							<reference key="NSDestination" ref="594875767"/>
-							<string key="NSLabel">value: autoScale</string>
-							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">autoScale</string>
-							<object class="NSDictionary" key="NSOptions">
-								<string key="NS.key.0">NSValidatesImmediately</string>
-								<boolean value="YES" key="NS.object.0"/>
-							</object>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">306</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -722,12 +751,44 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 					<int key="connectionID">304</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">scaleCheckbox:</string>
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">scaleState</string>
 						<reference key="source" ref="594875767"/>
 						<reference key="destination" ref="48275281"/>
 					</object>
-					<int key="connectionID">307</int>
+					<int key="connectionID">309</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">decreaseColorMax:</string>
+						<reference key="source" ref="594875767"/>
+						<reference key="destination" ref="294684194"/>
+					</object>
+					<int key="connectionID">313</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">increaseColorMax:</string>
+						<reference key="source" ref="594875767"/>
+						<reference key="destination" ref="308026372"/>
+					</object>
+					<int key="connectionID">314</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">increaseColorMin:</string>
+						<reference key="source" ref="594875767"/>
+						<reference key="destination" ref="705411830"/>
+					</object>
+					<int key="connectionID">315</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">decreaseColorMin:</string>
+						<reference key="source" ref="594875767"/>
+						<reference key="destination" ref="669491963"/>
+					</object>
+					<int key="connectionID">316</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -776,10 +837,10 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<reference ref="518615036"/>
 							<reference ref="557591714"/>
 							<reference ref="304024165"/>
-							<reference ref="48275281"/>
 							<reference ref="860410324"/>
 							<reference ref="240803401"/>
 							<reference ref="78601372"/>
+							<reference ref="48275281"/>
 						</object>
 						<reference key="parent" ref="1005"/>
 					</object>
@@ -1109,9 +1170,141 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				<reference key="dict.values" ref="1002"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">307</int>
+			<int key="maxID">319</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">StatusController</string>
+					<string key="superclassName">NSWindowController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>decreaseColorMax:</string>
+							<string>decreaseColorMin:</string>
+							<string>increaseColorMax:</string>
+							<string>increaseColorMin:</string>
+							<string>scaleCheckbox:</string>
+							<string>selectTool:</string>
+							<string>updateCheckbox:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>decreaseColorMax:</string>
+							<string>decreaseColorMin:</string>
+							<string>increaseColorMax:</string>
+							<string>increaseColorMin:</string>
+							<string>scaleCheckbox:</string>
+							<string>selectTool:</string>
+							<string>updateCheckbox:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">decreaseColorMax:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">decreaseColorMin:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">increaseColorMax:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">increaseColorMin:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">scaleCheckbox:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">selectTool:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">updateCheckbox:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>ColorMaxLabel</string>
+							<string>ColorMinLabel</string>
+							<string>scaleState</string>
+							<string>toolSelected</string>
+							<string>updateState</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSButton</string>
+							<string>NSMatrix</string>
+							<string>NSButton</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>ColorMaxLabel</string>
+							<string>ColorMinLabel</string>
+							<string>scaleState</string>
+							<string>toolSelected</string>
+							<string>updateState</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">ColorMaxLabel</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">ColorMinLabel</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">scaleState</string>
+								<string key="candidateClassName">NSButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">toolSelected</string>
+								<string key="candidateClassName">NSMatrix</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">updateState</string>
+								<string key="candidateClassName">NSButton</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/StatusController.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
